documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.VB

    Public Declare Function L13_DescAddr Lib "L13W32.DLL" Alias "_L13_DescAddr@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_DescAlloc Lib "L13W32.DLL" Alias "_L13_DescAlloc@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_DescConfig Lib "L13W32.DLL" Alias "_L13_DescConfig@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DescOptRd Lib "L13W32.DLL" Alias "_L13_DescOptRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_DescOptWr Lib "L13W32.DLL" Alias "_L13_DescOptWr@24" (ByVal descopt As UInt16, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_DescPtrRd Lib "L13W32.DLL" Alias "_L13_DescPtrRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_DescPtrWr Lib "L13W32.DLL" Alias "_L13_DescPtrWr@24" (ByVal msgaddr As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_DescRd Lib "L13W32.DLL" Alias "_L13_DescRd@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_DescWr Lib "L13W32.DLL" Alias "_L13_DescWr@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_Div Lib "L13W32.DLL" Alias "_L13_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function L13_DllUsageCount Lib "L13W32.DLL" Alias "_L13_DllUsageCount@0" () As Int32
    Public Declare Function L13_DPMMRdW Lib "L13W32.DLL" Alias "_L13_DPMMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_DPMMWrW Lib "L13W32.DLL" Alias "_L13_DPMMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_DPMRdB Lib "L13W32.DLL" Alias "_L13_DPMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_DPMRdL Lib "L13W32.DLL" Alias "_L13_DPMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_DPMRdsL Lib "L13W32.DLL" Alias "_L13_DPMRdsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_DPMRdsW Lib "L13W32.DLL" Alias "_L13_DPMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_DPMRdW Lib "L13W32.DLL" Alias "_L13_DPMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_DPMWrB Lib "L13W32.DLL" Alias "_L13_DPMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_DPMWrL Lib "L13W32.DLL" Alias "_L13_DPMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_DPMWrsL Lib "L13W32.DLL" Alias "_L13_DPMWrsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_DPMWrsW Lib "L13W32.DLL" Alias "_L13_DPMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_DPMWrW Lib "L13W32.DLL" Alias "_L13_DPMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_DspBioClear Lib "L13W32.DLL" Alias "_L13_DspBioClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspBioRd Lib "L13W32.DLL" Alias "_L13_DspBioRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_DspBioSet Lib "L13W32.DLL" Alias "_L13_DspBioSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspHmClear Lib "L13W32.DLL" Alias "_L13_DspHmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspHmSet Lib "L13W32.DLL" Alias "_L13_DspHmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspIntfClear Lib "L13W32.DLL" Alias "_L13_DspIntfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspIntfRead Lib "L13W32.DLL" Alias "_L13_DspIntfRead@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspIntmClear Lib "L13W32.DLL" Alias "_L13_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspIntmSet Lib "L13W32.DLL" Alias "_L13_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspXfClear Lib "L13W32.DLL" Alias "_L13_DspXfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DspXfSet Lib "L13W32.DLL" Alias "_L13_DspXfSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrDesc Lib "L13W32.DLL" Alias "_L13_ErrDesc@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L13_ErrDescStr Lib "L13W32.DLL" Alias "_L13_ErrDescStr@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L13_ErrName Lib "L13W32.DLL" Alias "_L13_ErrName@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L13_ErrorIsTaggedBC Lib "L13W32.DLL" Alias "_L13_ErrorIsTaggedBC@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorIsTaggedRT Lib "L13W32.DLL" Alias "_L13_ErrorIsTaggedRT@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ErrorResponse Lib "L13W32.DLL" Alias "_L13_ErrorResponse@8" (ByVal responseval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_ErrorSync Lib "L13W32.DLL" Alias "_L13_ErrorSync@8" (ByVal value As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_ErrorTimeout Lib "L13W32.DLL" Alias "_L13_ErrorTimeout@8" (ByVal timeoutval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_ErrorWatch Lib "L13W32.DLL" Alias "_L13_ErrorWatch@8" (ByVal value As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_ErrorWatchWr Lib "L13W32.DLL" Alias "_L13_ErrorWatchWr@8" (ByVal value As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_ErrorWatchWrEx Lib "L13W32.DLL" Alias "_L13_ErrorWatchWrEx@8" (ByVal value As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_ExtDinRd Lib "L13W32.DLL" Alias "_L13_ExtDinRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_ExtDinWr Lib "L13W32.DLL" Alias "_L13_ExtDinWr@8" (ByVal dinval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_ExtDoutRd Lib "L13W32.DLL" Alias "_L13_ExtDoutRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_ExtDoutWr Lib "L13W32.DLL" Alias "_L13_ExtDoutWr@8" (ByVal doutval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_FileClose Lib "L13W32.DLL" Alias "_L13_FileClose@4" (ByVal handle As IntPtr)
    Public Declare Function L13_FileErr Lib "L13W32.DLL" Alias "_L13_FileErr@0" () As Int32
    Public Declare Sub L13_FileErrClr Lib "L13W32.DLL" Alias "_L13_FileErrClr@0" ()
    Public Declare Sub L13_FileErrSet Lib "L13W32.DLL" Alias "_L13_FileErrSet@0" ()
    Public Declare Function L13_FileOpenRead Lib "L13W32.DLL" Alias "_L13_FileOpenRead@4" (ByRef filename As String) As UInt32
    Public Declare Function L13_FileOpenWrite Lib "L13W32.DLL" Alias "_L13_FileOpenWrite@4" (ByRef filename As String) As UInt32
    Public Declare Function L13_FileRead Lib "L13W32.DLL" Alias "_L13_FileRead@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function L13_FileSeek Lib "L13W32.DLL" Alias "_L13_FileSeek@8" (ByVal handle As IntPtr, ByVal offset As UInt32) As Int32
    Public Declare Function L13_FileTell Lib "L13W32.DLL" Alias "_L13_FileTell@4" (ByVal handle As IntPtr) As UInt32
    Public Declare Function L13_FileWrite Lib "L13W32.DLL" Alias "_L13_FileWrite@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function L13_GetHigh Lib "L13W32.DLL" Alias "_L13_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function L13_GetLow Lib "L13W32.DLL" Alias "_L13_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function L13_GlobalRdW Lib "L13W32.DLL" Alias "_L13_GlobalRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_GlobalWrW Lib "L13W32.DLL" Alias "_L13_GlobalWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_HandleClose Lib "L13W32.DLL" Alias "_L13_HandleClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleDel Lib "L13W32.DLL" Alias "_L13_HandleDel@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleGet Lib "L13W32.DLL" Alias "_L13_HandleGet@20" (ByRef cardstr As String, ByRef cardnum As Int32, ByRef devnum As Int32, ByRef sizval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleIns Lib "L13W32.DLL" Alias "_L13_HandleIns@16" (ByRef cardname As String, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function L13_HandleOkay Lib "L13W32.DLL" Alias "_L13_HandleOkay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleOpen Lib "L13W32.DLL" Alias "_L13_HandleOpen@12" (ByRef cardname As String, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleOpenWin95 Lib "L13W32.DLL" Alias "_L13_HandleOpenWin95@12" (ByRef cardname As String, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleOpenWinNT Lib "L13W32.DLL" Alias "_L13_HandleOpenWinNT@12" (ByRef cardname As String, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleVer Lib "L13W32.DLL" Alias "_L13_HandleVer@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HandleVerPLX Lib "L13W32.DLL" Alias "_L13_HandleVerPLX@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_HeapAlloc Lib "L13W32.DLL" Alias "_L13_HeapAlloc@8" (ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_HeapAllocAll Lib "L13W32.DLL" Alias "_L13_HeapAllocAll@8" (ByRef wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_HeapAllocAllDPM Lib "L13W32.DLL" Alias "_L13_HeapAllocAllDPM@8" (ByRef wordcount As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_HeapAllocDPM Lib "L13W32.DLL" Alias "_L13_HeapAllocDPM@8" (ByVal wordcount As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_HeapAllocEx Lib "L13W32.DLL" Alias "_L13_HeapAllocEx@12" (ByVal configval As UInt16, ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_HeapWipe Lib "L13W32.DLL" Alias "_L13_HeapWipe@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_HeapWipeDPM Lib "L13W32.DLL" Alias "_L13_HeapWipeDPM@4" (ByVal handleval As UInt32) As UInt32
